tests/struct_field_private_error2.june
// error: modifying private member field

struct Stats {
    private age: i64
}

fun main() {
    mut stats = new Stats(age: 88)

    stats.age = 77
}